# ReeTUI

./: .gitignore  Cargo.toml  HELP.md  readme.md
.github/workflows/: rust.yml  rusty.yml
downloads/: main
src/: app.rs  main.rs
src/api/: auth_api.rs  error.rs  file_api.rs  mod.rs  models.rs  websocket.rs
src/app/: app_state.rs  mod.rs
src/config/: mod.rs
src/themes/: mod.rs  themes.json
src/tui/: animation.rs  auth_tui.rs  chat_tui.rs  home_tui.rs  mod.rs  text_input.rs  themes.rs
src/tui/auth/: events.rs  mod.rs  page.rs  state.rs
src/tui/chat/: connection.rs  create_channel_form.rs  gif_renderer.rs  image_handler.rs  message_parsing.rs  mod.rs  theme_settings_form.rs  ui.rs  utils.rs  ws_command.rs
src/tui/chat/popups/: create_channel.rs  debug_json.rs  deconnection.rs  download_progress.rs  downloads.rs  emojis.rs  file_manager.rs  help.rs  helpers.rs  mentions.rs  mod.rs  notification.rs  quit.rs  set_theme.rs  settings.rs
src/tui/chat/tests/: message_parsing_test.rs  mod.rs
src/tui/file_manager_module/: file_manager.rs
src/tui/help/: events.rs  mod.rs  page.rs  state.rs
src/tui/home/: events.rs  mod.rs  page.rs  state.rs
src/tui/notification/: mod.rs  notification.rs  ui.rs
src/tui/settings/: events.rs  helpers.rs  mod.rs  page.rs  state.rs
