[package]
name = "ReeTUI"
version = "0.0.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
chrono = { version = "0.4.41", features = ["serde"] }
crossterm = { version = "0.29.0", features = ["events"] }
ratatui = "0.29.0"
sha2 = "0.10.9"
http = "1.3.1"
rustls = { version = "0.23.28", features = ["ring"] }
tokio-rustls = "0.26.2"
uuid = {version = "1.17.0", features = ["v4"]}
textwrap = "0.16.2"
emojis = "0.7.0"
log = "0.4"
env_logger = "0.11"
notify-rust = "4.1.0"
unicode-segmentation = "1.11.0"
regex = "1.10.4"
