[package]
name = "ReeTUI"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
base64 = "0.22.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.28.0"
devicons = "0.6.12"
dirs = "6.0.0"
emojis = "0.7.0"
futures-util = "0.3.30"
gif = "0.13.3"
futures = "0.3"
sha2 = "0.10"
image = "0.25.1"
lazy_static = "1.4.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
regex = "1.10.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
syntect = "5.2.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.22.0", features = ["__rustls-tls"] }
tungstenite = { version = "0.22.0", default-features = false, features = ["__rustls-tls"] }
tokio-util = "0.7.10"
unicode-segmentation = "1.11.0"
url = "2.5.0"
webbrowser = "1.0.1"
ansi-to-tui = "7.0.0"
bytes = "1.6.0"
textwrap = "0.16.1"
tokio-stream = "0.1.15"
uuid = { version = "1.8.0", features = ["v4"] }
unicode-width = "=0.2.0"
sysinfo = "0.29"
notify-rust = "4"
rustls = { version = "0.23.31", features = ["ring"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "0.1"
aws-lc-rs = { version = "1.13.3", features = ["bindgen"] }

